--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,16 @@
     <h1>My Message</h1>
     <div id="msg">Msg</div>
     <div id="error">Error</div>
+
+    <div id="input">
+      <form action="/update" method="post" id="msgform">
+        <input name="body" id="message"/>
+        <input type="submit" value="Go"/>
+      </form>
+    </div>
+
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+
     <script src="{{ static_url("chat.js") }}" type="text/javascript"></script>
   </body>
 </html>
