Auto focus on msg text and clear it after sent.

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 
     <div id="input">
       <form action="/update" method="post" id="msgform">
-        <input name="body" id="message"/>
+        <input type="text" name="body" id="message"/>
         <input type="submit" value="Go"/>
       </form>
     </div>
