--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,6 @@
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
-    <script src="{{ static_url("chat.js") }}" type="text/javascript"></script>
+    <script src="{{ static_url("chat2.js") }}" type="text/javascript"></script>
   </body>
 </html>
